# jdoo

./: .gitignore  LICENSE  Makefile.am  Makefile.in  README  alert.h  collector.c  config.h.in  configure.ac  control.c  event.c  file.c  http.c  jdoo.1  jdoorc  l.l  log.c  monit.1  monitor.c  monitor.h  monitrc  p.y  status.c  util.c  validate.c
build-tools/: version-gen.sh
debian/: changelog  control  copyright  jdoo.default  jdoo.dirs  jdoo.examples  jdoo.init  jdoo.install  jdoo.lintian-overrides  jdoo.logrotate  jdoo.pam  jdoo.postinst  jdoo.postrm  monit-gpl.init  monit-gpl.lintian-overrides  monit.default  monit.examples  rules
debian/jdoorc.d/: cron  openssh-server
debian/patches/: monit.1-debian-path.dpatch
http/: cervlet.c
